# GameReader.pl-Game-Narrator

./: LICENSE.txt  README.md  debug.html  index.html  launcher.html  main.py  package-lock.json  package.json  requirements.txt  structure.txt  vite.config.ts
assets/images/: start-logo.psd
audio/: __init__.py  player.py  speed.py  volume.py
core/: app.py  constants.py  debug.py  paths.py  resolution_scaling.py  state.py  validation.py
input/: __init__.py  hotkeys.py
ocr/: __init__.py  capture.py  filters.py  parallel.py
presets/: __init__.py  manager.py  schema.py
public/: app.css  tray_menu.html
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/models/: README.txt  ppocr_keys_v5.txt
src-tauri/src/: audio.rs  capture.rs  capture_dxgi.rs  capture_wgc.rs  commands.rs  config.rs  constants.rs  dedup.rs  ducking.rs  frame_diff.rs  hotkeys.rs  hud_overlay.rs  lib.rs  logging.rs  main.rs  matcher.rs  ocr.rs  ocr_engine.rs  pipeline.rs  preprocessing.rs  preset.rs  process_priority.rs  region.rs  region_overlay.rs  region_selector.rs  scaling.rs  single_instance.rs  state.rs  system_sounds.rs  text_filters.rs  text_grouping.rs  time_stretch.rs  tray.rs  validation.rs  window_picker.rs
ui/: debug_window.py  keymap.py  main_window.py  tooltips.py  widgets.py
ui/overlay/: debug_overlay.py  hotkeys_overlay.py  screen_area_selector.py
ui/tab/: about_tab.py  advanced_tab.py  files_tab.py  screen_tab.py  shortcuts_tab.py  start_tab.py
ui/theme/: global_qss.py  theme.py
utils/: system.py
